PropositionNodeSetTest and support and matching tests are failing